Fix indentation in index.ejs for better readability

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,9 +15,9 @@
 
   <!-- SCREEN -->
   <div class="display">
+  <div id="expression-preview"></div>
   <div id="screen"><%= result %></div>
 </div>
-
   <!-- 🔹 MEMORY DISPLAY -->
   <div class="memory-display">
     Memory: <%= memory %>
